Kubernetes/simple_web_server/2_service_loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-web-service-lb
spec:
  type: LoadBalancer
  selector:
    app: webserver
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      # <port> is the port to bind on the service side
      port: 443
      # <targetPort> is the port to bind on the Pod side
      targetPort: 443
